donate link update

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ Presents</p>
                         <a href="#"><i title="Tweet" class="fa fa-2x fa-twitter" aria-hidden="true"></i></a>
                         <a href="#"><i title="location" class="fa fa-2x fa-map-marker" aria-hidden="true"></i></a>
                         <a href="https://ecs.schoolauction.net/gala2017/tickets/ticket_sales" target="_blank" title="Buyticket" class="btn btn-danger">Buy Tickets</a>
-                        <a href="#" title="Donate" class="btn btn-danger">Donate</a>
+                        <a href="https://www.paypal.me/ecseattle" target="_blank" title="Donate" class="btn btn-danger">Donate</a>
                     </div>
                 </div>
                 <div class="row bodynav">
